Update de proyecto
Cambios al proyecto, sigue sin ser dinamicamente responsivo del todo.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header__menu">
-            
-        </nav>
-
+        <h3 id="status__bar" style="position: fixed; top: 0px; right: 0px; color: aquamarine;"></h3>
     </header>
     <script src="logica-encriptador.js"></script>
     <main class="Presentacion">
@@ -35,7 +32,7 @@
             <p class="normales" id="texto2" >Ingresa el texto que desees encriptar o desencriptar.</p>
             <img src="assets/lupa.png" id="imagen__lupa" width="200" height="100" alt="Imagen de un personaje sin rostro humanoide buscando con una lupa" class="box__visualizador__imagen">
             
-            <button id="copiar" onclick="copiar();" class="botones__copiar">Copiar</button>
+            <button id="copiar" onclick="copiar();" class="botones__copiar" style="visibility: hidden;" >Copiar</button>
         </section>
     </main>
     <footer class="Footer">
