--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="titulo">
                 Encriptador de Textos
                 </strong> </h1>
-            <textarea id="textoUsuario" class="input">  </textarea>
+            <textarea id="textoUsuario" class="input" ;">  </textarea>
             <div class="advertencia">
                 <img src="assets/exclamation.png" width="30" height="30"><p>Introducir letras minúsculas y sin acentos!</p> 
             </div>
@@ -30,7 +30,7 @@
         <section class="box__visualizador">
             <p class="negritas" id="texto" >Ningun mensaje fue encontrado</p>
             <p class="normales" id="texto2" >Ingresa el texto que desees encriptar o desencriptar.</p>
-            <img src="assets/lupa.png" id="imagen__lupa" width="200" height="100" alt="Imagen de un personaje sin rostro humanoide buscando con una lupa" class="box__visualizador__imagen">
+            <img src="assets/lupa.png" id="imagen__lupa" width="200" height="100" alt="Imagen de una lupa" class="box__visualizador__imagen">
             
             <button id="copiar" onclick="copiar();" class="botones__copiar" style="visibility: hidden;" >Copiar</button>
         </section>
